--- a/package.json
+++ b/package.json
@@ -1,12 +1,77 @@
 {
-  "name": "aminya.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "deploy": "gh-pages --dist ./dist"
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
-  }
+ "name": "aminya.github.io",
+ "version": "1.0.0",
+ "description": "Amin Yahyaabadi's personal website",
+ "homepage": "https://github.com/aminya/aminya.github.io",
+ "license": "Proprietary",
+ "author": "Amin Yahyaabadi <aminyahyaabadi74@gmail.com>",
+ "repository": {
+  "type": "git",
+  "url": "git+https://github.com/aminya/aminya.github.io.git"
+ },
+ "dependencies": {
+  "@fortawesome/fontawesome-free": "^6.2.0",
+  "astro-imagetools": "^0.6.10",
+  "babel-preset-solid": "~1.5.4",
+  "bootstrap": "5.2.0",
+  "minireset.css": "^0.0.7",
+  "solid-app-router": "^0.4.2",
+  "solid-js": "^1.5.4"
+ },
+ "devDependencies": {
+  "@astrojs/mdx": "^0.11.1",
+  "@astrojs/sitemap": "^1.0.0",
+  "@astrojs/solid-js": "^1.1.0",
+  "@babel/cli": "^7.18.10",
+  "@babel/core": "^7.18.13",
+  "@fullhuman/postcss-purgecss": "^4.1.3",
+  "@milahu/patch-package": "^6.4.14",
+  "@parcel/optimizer-svgo": "^2.7.0",
+  "@parcel/packager-raw-url": "^2.7.0",
+  "@parcel/packager-ts": "2.7.0",
+  "@parcel/transformer-image": "2.7.0",
+  "@parcel/transformer-less": "2.7.0",
+  "@parcel/transformer-sass": "2.7.0",
+  "@parcel/transformer-svg": "2.7.0",
+  "@parcel/transformer-webmanifest": "^2.7.0",
+  "@swc/core": "^1.2.247",
+  "@types/babel__core": "^7.1.19",
+  "@types/bootstrap": "5.2.3",
+  "@types/fs-extra": "^9.0.13",
+  "@types/gh-pages": "^3.2.1",
+  "@types/less": "^3.0.3",
+  "@types/license-checker": "^25.0.3",
+  "@types/node": "18.7.14",
+  "@types/prettier": "^2.7.0",
+  "@types/sharp": "^0.30.5",
+  "@types/svgo": "^2.6.4",
+  "@vitejs/plugin-legacy": "^2.0.1",
+  "astro": "1.1.5",
+  "astro-parcel": "^0.5.0",
+  "cross-env": "^7.0.3",
+  "cssnano": "^5.1.13",
+  "eslint-config-atomic": "^1.18.1",
+  "fast-glob": "^3.2.11",
+  "fs-extra": "^10.1.0",
+  "gh-pages": "^4.0.0",
+  "htmlnano": "^2.0.2",
+  "license-checker": "^25.0.1",
+  "npm-run-all2": "^6.0.2",
+  "parcel": "2.7.0",
+  "pkg-types": "^0.3.5",
+  "posthtml": "^0.16.6",
+  "prettier": "^2.7.1",
+  "prettier-config-atomic": "^3.1.0",
+  "prettier-plugin-astro": "^0.5.4",
+  "replace-in-files-cli": "^2.0.0",
+  "sass": "^1.54.8",
+  "servor": "^4.0.2",
+  "sharp": "^0.29.3",
+  "shx": "^0.3.4",
+  "svgo": "^2.8.0",
+  "terser": "^5.15.0",
+  "terser-config-atomic": "^0.1.1",
+  "ts-node": "^10.9.1",
+  "typescript": "4.8.2"
+ }
 }
