--- a/package.json
+++ b/package.json
@@ -10,66 +10,66 @@
   "url": "git+https://github.com/aminya/aminya.github.io.git"
  },
  "dependencies": {
-  "@fortawesome/fontawesome-free": "^6.2.0",
-  "astro-imagetools": "^0.6.10",
-  "bootstrap": "5.2.1",
-  "solid-js": "^1.5.4"
+  "@fortawesome/fontawesome-free": "^6.2.1",
+  "astro-imagetools": "^0.6.17",
+  "bootstrap": "5.2.3",
+  "solid-js": "^1.6.5"
  },
  "devDependencies": {
-  "@astrojs/mdx": "^0.11.1",
+  "@astrojs/mdx": "^0.13.0",
   "@astrojs/sitemap": "^1.0.0",
-  "@astrojs/solid-js": "^1.1.0",
-  "@babel/cli": "^7.18.10",
-  "@babel/core": "^7.19.0",
-  "@fullhuman/postcss-purgecss": "^4.1.3",
-  "@milahu/patch-package": "^6.4.14",
-  "@parcel/optimizer-svgo": "^2.7.0",
-  "@parcel/packager-raw-url": "^2.7.0",
-  "@parcel/packager-ts": "2.7.0",
-  "@parcel/transformer-image": "2.7.0",
-  "@parcel/transformer-less": "2.7.0",
-  "@parcel/transformer-sass": "2.7.0",
-  "@parcel/transformer-svg": "2.7.0",
-  "@parcel/transformer-webmanifest": "^2.7.0",
-  "@swc/core": "^1.3.0",
-  "@types/babel__core": "^7.1.19",
-  "@types/bootstrap": "5.2.4",
+  "@astrojs/solid-js": "^1.2.3",
+  "@babel/cli": "^7.19.3",
+  "@babel/core": "^7.20.5",
+  "@fullhuman/postcss-purgecss": "^5.0.0",
+  "@parcel/optimizer-svgo": "^2.8.2",
+  "@parcel/packager-raw-url": "^2.8.2",
+  "@parcel/packager-ts": "2.8.2",
+  "@parcel/transformer-image": "2.8.2",
+  "@parcel/transformer-less": "2.8.2",
+  "@parcel/transformer-sass": "2.8.2",
+  "@parcel/transformer-svg": "2.8.2",
+  "@parcel/transformer-webmanifest": "^2.8.2",
+  "@swc/core": "^1.3.23",
+  "@types/babel__core": "^7.1.20",
+  "@types/bootstrap": "5.2.6",
   "@types/fs-extra": "^9.0.13",
   "@types/gh-pages": "^3.2.1",
   "@types/less": "^3.0.3",
   "@types/license-checker": "^25.0.3",
-  "@types/node": "18.7.16",
-  "@types/prettier": "^2.7.0",
-  "@types/sharp": "^0.30.5",
+  "@types/node": "18.11.17",
+  "@types/prettier": "^2.7.1",
+  "@types/sharp": "^0.31.0",
   "@types/svgo": "^2.6.4",
-  "@vitejs/plugin-legacy": "^2.1.0",
-  "astro": "1.2.1",
-  "astro-parcel": "^0.5.0",
-  "babel-preset-solid": "~1.5.4",
+  "@vitejs/plugin-legacy": "^3.0.1",
+  "astro": "1.7.1",
+  "astro-parcel": "^0.5.1",
+  "babel-preset-solid": "~1.6.3",
   "cross-env": "^7.0.3",
-  "cssnano": "^5.1.13",
+  "cssnano": "^5.1.14",
   "eslint-config-atomic": "^1.18.1",
   "fast-glob": "^3.2.12",
-  "fs-extra": "^10.1.0",
+  "fs-extra": "^11.1.0",
   "gh-pages": "^4.0.0",
-  "htmlnano": "^2.0.2",
+  "htmlnano": "^2.0.3",
   "license-checker": "^25.0.1",
-  "npm-run-all2": "^6.0.2",
-  "parcel": "2.7.0",
-  "pkg-types": "^0.3.5",
+  "lightningcss": "^1.17.1",
+  "npm-run-all2": "^6.0.4",
+  "parcel": "2.8.2",
+  "pkg-types": "^1.0.1",
   "posthtml": "^0.16.6",
-  "prettier": "^2.7.1",
+  "prettier": "^2.8.1",
   "prettier-config-atomic": "^3.1.0",
-  "prettier-plugin-astro": "^0.5.4",
+  "prettier-plugin-astro": "^0.7.0",
   "replace-in-files-cli": "^2.0.0",
-  "sass": "^1.54.9",
+  "sass": "^1.57.0",
   "servor": "^4.0.2",
   "sharp": "^0.29.3",
   "shx": "^0.3.4",
-  "svgo": "^2.8.0",
-  "terser": "^5.15.0",
+  "svgo": "^3.0.2",
+  "terser": "^5.16.1",
   "terser-config-atomic": "^0.1.1",
   "ts-node": "^10.9.1",
-  "typescript": "4.8.3"
+  "typescript": "4.9.4"
  }
 }
