--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "aminya.github.io",
- "version": "1.0.0",
+ "version": "1.1.0",
  "description": "Amin Yahyaabadi's personal website",
  "homepage": "https://github.com/aminya/aminya.github.io",
  "license": "Proprietary",
@@ -10,66 +10,66 @@
   "url": "git+https://github.com/aminya/aminya.github.io.git"
  },
  "dependencies": {
-  "@fortawesome/fontawesome-free": "^6.2.1",
-  "astro-imagetools": "^0.6.17",
-  "bootstrap": "5.2.3",
-  "solid-js": "^1.6.5"
+  "@fortawesome/fontawesome-free": "^6.4.2",
+  "astro-imagetools": "^0.9.0",
+  "bootstrap": "5.3.1",
+  "solid-js": "^1.7.11"
  },
  "devDependencies": {
-  "@astrojs/mdx": "^0.13.0",
-  "@astrojs/sitemap": "^1.0.0",
-  "@astrojs/solid-js": "^1.2.3",
-  "@babel/cli": "^7.19.3",
-  "@babel/core": "^7.20.5",
+  "@astrojs/mdx": "^1.0.3",
+  "@astrojs/sitemap": "^3.0.0",
+  "@astrojs/solid-js": "^3.0.1",
+  "@babel/cli": "^7.22.15",
+  "@babel/core": "^7.22.17",
   "@fullhuman/postcss-purgecss": "^5.0.0",
-  "@parcel/optimizer-svgo": "^2.8.2",
-  "@parcel/packager-raw-url": "^2.8.2",
-  "@parcel/packager-ts": "2.8.2",
-  "@parcel/transformer-image": "2.8.2",
-  "@parcel/transformer-less": "2.8.2",
-  "@parcel/transformer-sass": "2.8.2",
-  "@parcel/transformer-svg": "2.8.2",
-  "@parcel/transformer-webmanifest": "^2.8.2",
-  "@swc/core": "^1.3.23",
-  "@types/babel__core": "^7.1.20",
+  "@parcel/optimizer-svgo": "^2.9.3",
+  "@parcel/packager-raw-url": "^2.9.3",
+  "@parcel/packager-ts": "2.9.3",
+  "@parcel/transformer-image": "2.9.3",
+  "@parcel/transformer-less": "2.9.3",
+  "@parcel/transformer-sass": "2.9.3",
+  "@parcel/transformer-svg": "2.9.3",
+  "@parcel/transformer-webmanifest": "^2.9.3",
+  "@swc-node/register": "^1.6.7",
+  "@swc/core": "^1.3.84",
+  "@types/babel__core": "^7.20.1",
   "@types/bootstrap": "5.2.6",
-  "@types/fs-extra": "^9.0.13",
+  "@types/fs-extra": "^11.0.1",
   "@types/gh-pages": "^3.2.1",
-  "@types/less": "^3.0.3",
-  "@types/license-checker": "^25.0.3",
-  "@types/node": "18.11.17",
-  "@types/prettier": "^2.7.1",
-  "@types/sharp": "^0.31.0",
+  "@types/less": "^3.0.4",
+  "@types/license-checker": "^25.0.4",
+  "@types/node": "20.6.0",
+  "@types/prettier": "^2.7.3",
+  "@types/sharp": "^0.31.1",
   "@types/svgo": "^2.6.4",
-  "@vitejs/plugin-legacy": "^3.0.1",
-  "astro": "1.7.1",
+  "@vitejs/plugin-legacy": "^4.1.1",
+  "astro": "3.0.12",
   "astro-parcel": "^0.5.1",
-  "babel-preset-solid": "~1.6.3",
+  "babel-preset-solid": "~1.7.7",
   "cross-env": "^7.0.3",
-  "cssnano": "^5.1.14",
-  "eslint-config-atomic": "^1.18.1",
-  "fast-glob": "^3.2.12",
-  "fs-extra": "^11.1.0",
-  "gh-pages": "^4.0.0",
-  "htmlnano": "^2.0.3",
+  "cssnano": "^6.0.1",
+  "eslint-config-atomic": "^1.19.3",
+  "fast-glob": "^3.3.1",
+  "fs-extra": "^11.1.1",
+  "gh-pages": "^6.0.0",
+  "htmlnano": "^2.0.4",
   "license-checker": "^25.0.1",
-  "lightningcss": "^1.17.1",
-  "npm-run-all2": "^6.0.4",
-  "parcel": "2.8.2",
-  "pkg-types": "^1.0.1",
+  "lightningcss": "^1.21.8",
+  "npm-run-all2": "^6.0.6",
+  "parcel": "2.9.3",
+  "pkg-types": "^1.0.3",
   "posthtml": "^0.16.6",
-  "prettier": "^2.8.1",
+  "prettier": "^3.0.3",
   "prettier-config-atomic": "^3.1.0",
-  "prettier-plugin-astro": "^0.7.0",
-  "replace-in-files-cli": "^2.0.0",
-  "sass": "^1.57.0",
+  "prettier-plugin-astro": "^0.12.0",
+  "replace-in-files-cli": "^2.2.0",
+  "sass": "^1.66.1",
   "servor": "^4.0.2",
-  "sharp": "^0.29.3",
+  "sharp": "^0.32.5",
   "shx": "^0.3.4",
   "svgo": "^3.0.2",
-  "terser": "^5.16.1",
-  "terser-config-atomic": "^0.1.1",
-  "ts-node": "^10.9.1",
-  "typescript": "4.9.4"
+  "terser": "^5.19.4",
+  "terser-config-atomic": "^1.0.0",
+  "typescript": "5.2.2"
  }
 }
