--- a/package.json
+++ b/package.json
@@ -10,66 +10,58 @@
   "url": "git+https://github.com/aminya/aminya.github.io.git"
  },
  "dependencies": {
-  "@fortawesome/fontawesome-free": "^6.4.2",
-  "astro-imagetools": "^0.9.0",
-  "bootstrap": "5.3.1",
-  "solid-js": "^1.7.11"
+  "@fortawesome/fontawesome-free": "^6.6.0",
+  "@tailwindcss/typography": "^0.5.14",
+  "solid-js": "^1.8.21",
+  "tailwindcss": "^3.4.10"
  },
  "devDependencies": {
-  "@astrojs/mdx": "^1.0.3",
-  "@astrojs/sitemap": "^3.0.0",
-  "@astrojs/solid-js": "^3.0.1",
-  "@babel/cli": "^7.22.15",
-  "@babel/core": "^7.22.17",
-  "@fullhuman/postcss-purgecss": "^5.0.0",
-  "@parcel/optimizer-svgo": "^2.9.3",
-  "@parcel/packager-raw-url": "^2.9.3",
-  "@parcel/packager-ts": "2.9.3",
-  "@parcel/transformer-image": "2.9.3",
-  "@parcel/transformer-less": "2.9.3",
-  "@parcel/transformer-sass": "2.9.3",
-  "@parcel/transformer-svg": "2.9.3",
-  "@parcel/transformer-webmanifest": "^2.9.3",
-  "@swc-node/register": "^1.6.7",
-  "@swc/core": "^1.3.84",
-  "@types/babel__core": "^7.20.1",
-  "@types/bootstrap": "5.2.6",
-  "@types/fs-extra": "^11.0.1",
-  "@types/gh-pages": "^3.2.1",
-  "@types/less": "^3.0.4",
-  "@types/license-checker": "^25.0.4",
-  "@types/node": "20.6.0",
-  "@types/prettier": "^2.7.3",
-  "@types/sharp": "^0.31.1",
-  "@types/svgo": "^2.6.4",
-  "@vitejs/plugin-legacy": "^4.1.1",
-  "astro": "3.0.12",
-  "astro-parcel": "^0.5.1",
-  "babel-preset-solid": "~1.7.7",
+  "@astrojs/check": "^0.9.3",
+  "@astrojs/mdx": "^3.1.4",
+  "@astrojs/sitemap": "^3.1.6",
+  "@astrojs/solid-js": "^4.4.1",
+  "@astrojs/tailwind": "^5.1.0",
+  "@babel/core": "^7.25.2",
+  "@fullhuman/postcss-purgecss": "^6.0.0",
+  "@swc-node/register": "^1.10.9",
+  "@swc/core": "^1.7.18",
+  "@types/bootstrap": "~5.2.10",
+  "@types/eslint": "^9.6.0",
+  "@types/fs-extra": "^11.0.4",
+  "@types/gh-pages": "^6.1.0",
+  "@types/license-checker": "^25.0.6",
+  "@types/node": "22.5.0",
+  "astro": "4.14.5",
+  "astro-htmlnano": "1.4.4",
+  "babel-preset-solid": "~1.8.19",
+  "browserslist": "^4.23.3",
   "cross-env": "^7.0.3",
-  "cssnano": "^6.0.1",
-  "eslint-config-atomic": "^1.19.3",
-  "fast-glob": "^3.3.1",
-  "fs-extra": "^11.1.1",
-  "gh-pages": "^6.0.0",
-  "htmlnano": "^2.0.4",
+  "cssnano": "^7.0.5",
+  "eslint": "^9.9.1",
+  "eslint-config-atomic": "^1.22.1",
+  "fast-glob": "^3.3.2",
+  "fs-extra": "^11.2.0",
+  "gh-pages": "^6.1.1",
   "license-checker": "^25.0.1",
-  "lightningcss": "^1.21.8",
-  "npm-run-all2": "^6.0.6",
-  "parcel": "2.9.3",
-  "pkg-types": "^1.0.3",
-  "posthtml": "^0.16.6",
-  "prettier": "^3.0.3",
-  "prettier-config-atomic": "^3.1.0",
-  "prettier-plugin-astro": "^0.12.0",
-  "replace-in-files-cli": "^2.2.0",
-  "sass": "^1.66.1",
+  "lightningcss": "^1.26.0",
+  "lite-youtube-embed": "^0.3.3",
+  "npm-run-all2": "^6.2.2",
+  "pkg-types": "^1.2.0",
+  "postcss": "^8.4.41",
+  "prettier": "^3.3.3",
+  "prettier-config-atomic": "^4.0.0",
+  "prettier-plugin-astro": "^0.14.1",
+  "purgecss": "^5.0.0",
+  "replace-in-files-cli": "^3.0.0",
+  "sass": "^1.77.8",
   "servor": "^4.0.2",
-  "sharp": "^0.32.5",
+  "sharp": "^0.33.5",
+  "shorthash2": "1.0.3",
   "shx": "^0.3.4",
-  "svgo": "^3.0.2",
-  "terser": "^5.19.4",
+  "svgo": "^3.3.2",
+  "terser": "^5.31.6",
   "terser-config-atomic": "^1.0.0",
-  "typescript": "5.2.2"
+  "typescript": "5.5.4",
+  "typesync": "^0.13.0"
  }
 }
