--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "browserslist": "^4.23.3",
   "cross-env": "^7.0.3",
   "cssnano": "^7.0.5",
+  "dprint": "^0.47.2",
   "eslint": "^9.9.1",
   "eslint-config-atomic": "^1.22.1",
   "fast-glob": "^3.3.2",
