--- a/package.json
+++ b/package.json
@@ -11,58 +11,60 @@
  },
  "dependencies": {
   "@fortawesome/fontawesome-free": "^6.6.0",
-  "@tailwindcss/typography": "^0.5.14",
-  "solid-js": "^1.8.21",
-  "tailwindcss": "^3.4.10"
+  "@tailwindcss/typography": "^0.5.15",
+  "solid-js": "^1.9.1",
+  "tailwindcss": "^3.4.13"
  },
  "devDependencies": {
   "@astrojs/check": "^0.9.3",
-  "@astrojs/mdx": "^3.1.4",
+  "@astrojs/mdx": "^3.1.7",
   "@astrojs/sitemap": "^3.1.6",
-  "@astrojs/solid-js": "^4.4.1",
-  "@astrojs/tailwind": "^5.1.0",
+  "@astrojs/solid-js": "^4.4.2",
+  "@astrojs/tailwind": "^5.1.1",
   "@babel/core": "^7.25.2",
   "@fullhuman/postcss-purgecss": "^6.0.0",
   "@swc-node/register": "^1.10.9",
-  "@swc/core": "^1.7.18",
+  "@swc/core": "^1.7.26",
+  "@types/babel__core": "~7.20.5",
   "@types/bootstrap": "~5.2.10",
-  "@types/eslint": "^9.6.0",
+  "@types/eslint": "^9.6.1",
   "@types/fs-extra": "^11.0.4",
   "@types/gh-pages": "^6.1.0",
   "@types/license-checker": "^25.0.6",
-  "@types/node": "22.5.0",
-  "astro": "4.14.5",
+  "@types/node": "22.7.4",
+  "astro": "4.15.9",
   "astro-htmlnano": "1.4.4",
-  "babel-preset-solid": "~1.8.19",
-  "browserslist": "^4.23.3",
+  "babel-preset-solid": "~1.9.0",
+  "browserslist": "^4.24.0",
   "cross-env": "^7.0.3",
-  "cssnano": "^7.0.5",
+  "cssnano": "^7.0.6",
   "dprint": "^0.47.2",
-  "eslint": "^9.9.1",
+  "eslint": "^9.11.1",
   "eslint-config-atomic": "^1.22.1",
   "fast-glob": "^3.3.2",
   "fs-extra": "^11.2.0",
   "gh-pages": "^6.1.1",
   "license-checker": "^25.0.1",
-  "lightningcss": "^1.26.0",
+  "lightningcss": "^1.27.0",
   "lite-youtube-embed": "^0.3.3",
-  "npm-run-all2": "^6.2.2",
+  "npm-check-updates": "^17.1.3",
+  "npm-run-all2": "^6.2.3",
   "pkg-types": "^1.2.0",
-  "postcss": "^8.4.41",
+  "postcss": "^8.4.47",
   "prettier": "^3.3.3",
   "prettier-config-atomic": "^4.0.0",
   "prettier-plugin-astro": "^0.14.1",
   "purgecss": "^5.0.0",
   "replace-in-files-cli": "^3.0.0",
-  "sass": "^1.77.8",
+  "sass": "^1.79.4",
   "servor": "^4.0.2",
   "sharp": "^0.33.5",
-  "shorthash2": "1.0.3",
+  "shorthash2": "1.0.5",
   "shx": "^0.3.4",
   "svgo": "^3.3.2",
-  "terser": "^5.31.6",
+  "terser": "^5.34.1",
   "terser-config-atomic": "^1.0.0",
-  "typescript": "5.5.4",
+  "typescript": "5.6.2",
   "typesync": "^0.13.0"
  }
 }
