--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
  "dependencies": {
   "@fortawesome/fontawesome-free": "^6.6.0",
   "@tailwindcss/typography": "^0.5.15",
+  "latex.css": "^1.12.0",
   "solid-js": "^1.9.1",
   "tailwindcss": "^3.4.13"
  },
@@ -54,6 +55,7 @@
   "prettier": "^3.3.3",
   "prettier-config-atomic": "^4.0.0",
   "prettier-plugin-astro": "^0.14.1",
+  "puppeteer": "^23.6.0",
   "purgecss": "^5.0.0",
   "replace-in-files-cli": "^3.0.0",
   "sass": "^1.79.4",
@@ -64,6 +66,7 @@
   "svgo": "^3.3.2",
   "terser": "^5.34.1",
   "terser-config-atomic": "^1.0.0",
+  "tsx": "^4.19.2",
   "typescript": "5.6.2",
   "typesync": "^0.13.0"
  }
